name:          MazeGen
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.18


executable maze
    main-is:              Main.hs
    build-depends:        base >=4.7 && <4.8
                        , GLFW-b
                        , gloss
                        , gloss-rendering
                        , OpenGL
                        , random
    hs-source-dirs:       src
    default-language:     Haskell2010

